--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -40,9 +40,9 @@
         <% @order_details.each do |order_detail| %>
          <tr>
           <td><%= order_detail.item.name  %></td>
-          <td><%= order_detail.item.price %></td>
+          <td><%= order_detail.item.price.to_s(:delimited, delimiter: ',') %></td>
           <td><%= order_detail.amount %></td>
-          <td><%= order_detail.price*order_detail.amount %></td>
+          <td><%= (order_detail.price*order_detail.amount).to_s(:delimited, delimiter: ',') %></td>
          </tr>
         <% end %>
       </table>
@@ -50,9 +50,9 @@
 
     <div class="col-xs-2 offset-1">
       <div class="total">
-       <p><strong>商品合計</strong>       <%= @order.total_payment %>円</p>
+       <p><strong>商品合計</strong>       <%= @order.total_payment.to_s(:delimited, delimiter: ',') %>円</p>
        <p><strong>送料</strong>           <%= @order.shipping_cost %>円</p>
-       <p><strong>請求金額合計</strong>   <%= (@order.total_payment + @order.shipping_cost) %>円</p>
+       <p><strong>請求金額合計</strong>   <%= (@order.total_payment + @order.shipping_cost).to_s(:delimited, delimiter: ',') %>円</p>
       </div>
     </div>
   </div>
