--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -6,7 +6,7 @@
     <h4><strong>登録情報</strong></h4><%= link_to "編集する", customers_information_edit_path, class: "btn btn-success mb-4" %>
 
         <table class="table table-bordered">
-          <body>
+          <tbody>
             <tr>
               <th class="table-active">氏名</th>
               <td><%= @customer.first_name %> <%= @customer.last_name %></td>
