--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-	<h5 tyle="width: 220px; background-color: #DDDDDD; text-align: center;">注文情報確認</h5>
-	<%= form_with model: @order,url: orders_path  do |order| %>
+	<h5 style="width: 220px; background-color: #DDDDDD; text-align: center;">注文情報確認</h5>
+	<%= form_with model: @order,url: orders_path, local: true do |order| %>
 
 	<div class="row">
 	  <div class="col-md-7">
@@ -14,12 +14,24 @@
 
 	      <tbody>
 	        <% @cart_items.each do |cart_item| %>
-	        <% @total+= cart_item.item.with_tax_price*cart_item.amount %>
+	        <% (@total+= cart_item.item.with_tax_price*cart_item.amount).to_s(:delimited, delimiter: ',') %>
 	        <tr>
 	          <td><%= image_tag cart_item.item.image, size: "70x50" %><%= cart_item.item.name %></td>
-	          <td><%= cart_item.item.with_tax_price %></td>
-	          <td><%= cart_item.amount %></td>
-	          <td><%= cart_item.item.with_tax_price*cart_item.amount %></td>
+	          <td>
+	          	<div style="margin: 10px 0;">
+	          		<%= cart_item.item.with_tax_price.to_s(:delimited, delimiter: ',') %>
+	          	</div>
+	          </td>
+	          <td>
+	          	<div style="margin: 10px 0;">
+	          		<%= cart_item.amount %>
+	          	</div>
+	          </td>
+	          <td>
+	          	<div style="margin: 10px 0;">
+	          		<%= (cart_item.item.with_tax_price*cart_item.amount).to_s(:delimited, delimiter: ',') %>
+	            </div>
+	          </td>
 	        </tr>
 	        <% end %>
 	     </tbody>
@@ -35,11 +47,11 @@
   	       </tr>
 	         <tr>
 	           <th class="table-active">商品合計</th>
-	           <td><%= @total %></td>
+	           <td><%= @total.to_s(:delimited, delimiter: ',') %></td>
 	         </tr>
 	         <tr>
 	           <th class="table-active">請求額</th>
-	           <td><%= @total+800 %></td>
+	           <td><%= (@total+800).to_s(:delimited, delimiter: ',') %></td>
 	         </tr>
 	       </tbody>
 	     </table>
@@ -47,22 +59,29 @@
 	 </div>
 	</div><br>
 
-	<p>
-	  <strong>支払方法 </strong>
-	  <%= @order.payment_method_i18n %>
-	</p>
+  <div class="row">
+  	<div class="col-md-3">
+			<p><strong>支払方法 </strong></p>
+			<p><strong>お届け先 </strong></p>
+		</div>
 
-  <p>
-    <strong>お届け先 </strong>
-    <%= @order.postal_code %> <%= @order.address %><br>
-    <%= @order.name %>
-  </p>
-  <%= order.hidden_field :payment_method ,:value => @order.payment_method %>
-  <%= order.hidden_field :shipping_cost ,:value => 800 %>
-  <%= order.hidden_field :address,:value => @order.address %>
-  <%= order.hidden_field :postal_code,:value => @order.postal_code %>
-  <%= order.hidden_field :name,:value => @order.name %>
-  <%= order.hidden_field :total_payment ,:value => @total %><br><br>
+		<div class="col-md-8" >
+			<p><%= @order.payment_method_i18n %></p>
+			<p>
+				<%= @order.postal_code %> <%= @order.address %><br>
+		    <%= @order.name %>
+		  </p>
+			<%= order.hidden_field :payment_method ,:value => @order.payment_method %>
+      <%= order.hidden_field :shipping_cost ,:value => 800 %>
+		  <%= order.hidden_field :address,:value => @order.address %>
+		  <%= order.hidden_field :postal_code,:value => @order.postal_code %>
+		  <%= order.hidden_field :name,:value => @order.name %>
+		  <%= order.hidden_field :total_payment ,:value => @total %>
+		</div>
+	</div><br>
+
+
+
 
   <div class="text-center">
     <%= order.submit "注文を確定する", class: "btn btn-success text-cenrer btn-lg" %>
