--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -27,7 +27,7 @@
     	<table class="table table-bordered border-dark">
     		<tr>
     			<td class="table-active">商品合計</td>
-    			<th><%= @order.total_payment - @order.shipping_cost %></th>
+    			<th><%= (@order.total_payment - @order.shipping_cost).to_s(:delimited, delimiter: ',') %></th>
     		</tr>
     		<tr>
     			<td class="table-active">配送料</td>
@@ -35,7 +35,7 @@
     		</tr>
     		<tr>
     			<td class="table-active">ご請求額</td>
-    			<th><%= @order.total_payment %></th>
+    			<th><%= @order.total_payment.to_s(:delimited, delimiter: ',') %></th>
     		</tr>
     	</table>
     </div>
@@ -54,9 +54,9 @@
 					<% @order_details.each do |order_detail| %>
 					<tr>
 						<td><%= order_detail.item.name %></td>
-						<td><%= order_detail.price %></td>
+						<td><%= order_detail.price.to_s(:delimited, delimiter: ',') %></td>
 						<td><%= order_detail.amount %></td>
-						<td><%= order_detail.price*order_detail.amount %></td>
+						<td><%= (order_detail.price*order_detail.amount).to_s(:delimited, delimiter: ',') %></td>
 					</tr>
           <% end %>
         </table>
