--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,8 +1,7 @@
 <div class="container">
   <h5 style="width: 150px; background-color: #DDDDDD; text-align: center;">会員情報編集</h5>
 
-  <%= form_with model: @customer, url: customer_registration_path, id: 'new_customer', class: 'new_customer' do |f| %>
-    <%= render "public/shared/error_messages", resource: resource %>
+  <%= form_with model: @customer, url: customers_information_path, method: :patch, local: :true do |f| %>
 
   <div class="row">
     <div class="col-md-12">
