--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -11,6 +11,7 @@
           <% end %>
         </div>
       <% end %>
+      <div style="text-align: center;"><%= paginate @items %></div>
     </div>
   </div>
 </div>
