--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,14 +1,15 @@
 <div class="container">
- <div class="row no-gutters">
-  <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
-    <%= form_with model: @customer, url:admin_customer_path(@customer.id) do |customer| %>
-   <h5 class="text-dark p-4 mb-0">
-     <%= @customer.last_name %><%= @customer.first_name %>さんの会員情報編集
-   </h5>
-   <div class="form-body p-4">
-      <div class="input-group mb-3 mt-4">
+ <h5 style="width: 280px; background-color: #DDDDDD; text-align: center;">
+  <%= @customer.last_name %><%= @customer.first_name %>さんの会員情報編集
+ </h5>
+ <div class="row">
+  <div class="col-md-12">
+    <%= form_with model: @customer, url:admin_customer_information_path(@customer.id) do |customer| %>
+
+   <table class="table table-borderless">
+     <tbody>
         <tr>
-          <th>ID</th>
+          <th class="col-md-3">ID</th>
           <td><%= @customer.id %></td>
         </tr>
         <tr>
@@ -36,12 +37,11 @@
           <td><%= @customer.email %></td>
         </tr>
         <tr>
-        <div>
-          <%= customer.label :is_deleted, "会員ステータス" %>
-          <%= customer.radio_button :is_deleted, :false %>有効
-          <%= customer.radio_button :is_deleted, :true %>退会
-        </div>
-    </div>
+          <th><%= customer.label :is_deleted, "会員ステータス" %></th>
+          <td><%= customer.radio_button :is_deleted, :false %>有効 <%= customer.radio_button :is_deleted, :true %>退会</td>
+        </tr>
+     </tbody>
+    </table>
     <div class="actions">
     <%= customer.submit '変更を保存', class: "btn btn-sm btn-success mt-9" %>
     </div>
