--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -27,7 +27,7 @@
     	<table class="table table-bordered border-dark">
     		<tr>
     			<td class="table-active">商品合計</td>
-    			<th><%= (@order.total_payment - @order.shipping_cost).to_s(:delimited, delimiter: ',') %></th>
+    			<th><%= @order.total_payment.to_s(:delimited, delimiter: ',') %></th>
     		</tr>
     		<tr>
     			<td class="table-active">配送料</td>
@@ -35,7 +35,7 @@
     		</tr>
     		<tr>
     			<td class="table-active">ご請求額</td>
-    			<th><%= @order.total_payment.to_s(:delimited, delimiter: ',') %></th>
+    			<th><%= (@order.total_payment + @order.shipping_cost).to_s(:delimited, delimiter: ',') %></th>
     		</tr>
     	</table>
     </div>
